@@ -1,3 +1,9 @@
+2009-03-16  Ulrich Drepper  <drepper@redhat.com>
+
+	* nscd/connections.c (restart): Try to preserve the process name
+	by reading the /proc/self/exe symlink and using the return name.
+	Patch by Jeff Bastian <jbastian@redhat.com>.
+
 2009-03-15  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #9733]
